2001-07-13 Alexander Rawass <alexannika@users.sourceforge.net>

	* user can click on rectangles and select/deselect them
	* those rectangles are stored in a list and appear
	  at the bottom of the right-button popupmenu
	
2001-07-12 Alexander Rawass <alexannika@users.sourceforge.net>

	* user can search for regexp, matches get highlighted
	* current_dir_display working again

2001-07-11 Alexander Rawass <alexannika@users.sourceforge.net>

	* new shading: image (sensible only with squarify)
	  displays pictures, can be used as picture browser
	* removed most warnings

2001-07-11 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* various bugs fixed in squarified treemaps:
	  correct end of recursion
	  using floats rather than ints to prevent miscalc.
	  should work now????
	* new hierarchical shadings

	
2001-07-10 Alexander Rawass <alexannika@users.sourceforge.net>

	* implemented squarified treemaps (experimental, buggy)
	* new file added: qtreemaparea_squarify.cpp
	* Bug: when zooming in too much, the paintarea takes up too much
	  memory -> X swaps till death

2001-07-05 Alexander Rawass <alexannika@users.sourceforge.net>
	
	* more options and exp. shadings
	* experimental dynamic shading (not working)
	* user can watch treemap build up
	* paintEntry moved to qtreemaparea_paint.cpp
	* drawTreeMap,drawDuTree,CTM moved to qtreemaparea_recursion.cpp
	* renamed some of the shadings and
	* wrote some Documentation how to use Shadings and Options

	
2001-07-03 Alexander Rawass <alexannika@users.sourceforge.net>

	* QTreeMapWindow is now an abstract class
	* KDirTreeMapWindow implements makeTreeMapWidget()
	* experimental hierach. cushion
	* new menu options (experimental & debugging)
	* new way to make a border (border_step)
	* CTM (Cushion Treemap) test routine added (not working yet)
	* new Bug: I'm getting warnings about wrong RGB parameters,
		even in flat mode
	

2001-07-01 Alexander Rawass <alexannika@users.sourceforge.net>
